assets/css/channel_lineup.css
#channel_lineup {
  font-family: arial;
  padding: 0;
    font: 14px Arial, Helvetica, sans-serif;
    overflow: hidden;
    margin: 0;
}

#channel_lineup ul {
  margin-left: 0;
  padding: 0;
  cursor: default;
}

#channel_lineup li {
  padding: 0;
  list-style: none;
  margin: 0;
}

#myGrid {
  background: white;
  outline: 0;
  border: 1px solid gray;
}

.grid-header {
  border: 1px solid gray;
  border-bottom: 0;
  border-top: 0;
  color: black;
  height: 24px;
  line-height: 24px;
}

.grid-header label {
  display: inline-block;
  font-weight: bold;
  margin: auto auto auto 6px;
}

.grid-header .ui-icon {
  margin: 4px 4px auto 6px;
  background-color: transparent;
  border-color: transparent;
}

.grid-header .ui-icon.ui-state-hover {
  background-color: white;
}

.grid-header #txtSearch {
  margin: 0 4px 0 4px;
  padding: 2px 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border: 1px solid silver;
}

.options-panel {
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  border: 1px solid silver;
  background: #f0f0f0;
  padding: 4px;
  margin-bottom: 20px;
  width: 320px;
  position: absolute;
  top: 0px;
  left: 650px;
}

#channel_lineup .headers {
  position: relative;
  padding: 0 15px;
}

#channel_lineup .headers .first,
#channel_lineup .headers .second
{
  width: 49.5%;
  display: inline-block;
  vertical-align: middle;
  text-align: right;
}

#channel_lineup .headers .first {
  text-align: left;
}

.tool-title {
  margin-right: 50px;
}

.commercial .tool-title {
  margin-top: 1px;
}

.commercial .tool-title:before {
  font-size: 14px;
  color: #C9EFEF;
  white-space: pre;
  content: "Commercial\a";
}

#channel_lineup .container {
  position: absolute;
  top: -25px;
  width: 750px;
}

#channel_lineup #container{
/*  top:345px;*/
  height: 415px;  
}

.slick-viewport{
    overflow-y:auto;
    overflow-x: hidden !important;
}


.slick-header-columns{
    display: none;
    border-top:1px solid silver;
}

.slick-cell, .slick-headerrow-column, slick-header-column{
    white-space: pre-wrap;      /* CSS3 */   
    white-space: -moz-pre-wrap; /* Firefox */    
    white-space: -pre-wrap;     /* Opera <7 */   
    white-space: -o-pre-wrap;   /* Opera 7 */    
    word-wrap: break-word;      /* IE */
    text-align: left;
}

.hidden{
    display: none;
}

.narrower,.narrow{
    text-align: center;    
}

.slick-header-column{
    text-align: center;
    height:40px !important;
    padding-top: 10px !important;
    word-wrap: break-word !important;  
}



.slick-cell{
    padding-left: 0;
    padding-right:0;
}


/*start*/

#mainHeader {
    width: 50%;
}

#packageHeaderContainer {
    margin-left: -8px;
}

#channel_lineup .table-header{
    padding-top:80px;
    overflow: hidden;
    margin-top: -70px;
}

#channel_lineup.com .table-header {
    padding-top: 140px;
    margin-top: -130px;
}

#channel_lineup .table-header .pull-left > .pull-left{
    height:50px;
    position: relative;
}

.arrow{
   position: absolute;
   left: -20px !important;
}

#channel_lineup .table-header .wide{
    width: 50%;
}


#channel_lineup .table-header .narrow{
    width: 16.5%;
}

#channel_lineup .table-header .call-letters{
   border-right: 1px solid #fff; 
}

#channel_lineup .table-header .channel-number{
    border-right: 1px solid #fff;
    border-left: 1px solid #fff;
}


.inner font {
  font-size: .8em;
  color: #47a3e6;
  font-weight: normal;
}

#mainHeader > div > div {
    position: absolute;
    bottom: 3px;
    left: 20px;
}

#channel_lineup svg{
   overflow: visible!important; 
}

.slick-viewport{
    overflow-x: hidden!important;
    overflow-y:scroll!important;
}

.red {
    color: gray;
}

.dot {
    position: relative;
    font-size: 30px;
    color: #0567AE;
    text-align: center;
}

input#txtSearch{
    width: 50%;
    height: 40px;
    padding: 0 20px;
    font-size: 1.5em;
    line-height: 1.5em;
    vertical-align: bottom;
}

#reset {
    font-size: 1.5em;
    height: 40px;
    vertical-align: bottom;
}

/**start pager**/
.slick-pager {
  width: 100%;
  height: 26px;
  border: 1px solid gray;
  border-top: 0;
  vertical-align: middle;
}

.slick-pager .slick-pager-status {
  display: inline-block;
  padding: 6px;
}

.slick-pager .ui-icon-container {
  display: inline-block;
  margin: 2px;
  border-color: gray;
}

.slick-pager .slick-pager-nav {
  display: inline-block;
  float: left;
  padding: 2px;
}

.slick-pager .slick-pager-settings {
  display: block;
  float: right;
  padding: 2px;
}

.slick-pager .slick-pager-settings * {
  vertical-align: middle;
}

.slick-pager .slick-pager-settings a {
  padding: 2px;
  text-decoration: underline;
  cursor: pointer;
}

#pager{
    width: 850px!important;
    height: 20px;
    position: absolute;
    left: 26px;
    top: 593px;
    /*display:none;*/
}

.slick-pager{
    border: 1px solid #ccc;
}
/**end of pager**/

#mainHeader a{
    font-weight:bold;
    color:#000;
}


.link-holder div {
    display: inline-block;
    width: 50%;
    min-width: 195px;
    line-height: 18px;
    padding-right: 10px;
    float: left;
}

.result-count b{
    text-decoration: none;
}

.text-holder .ui-state-default{
    display: inline-block;
    border-color: gray;
    margin: 2px;
/*    position: absolute;
    top: 38px;
    left: -1px;*/
    display:none;
}

.ui-state-default .ui-icon:hover{
    cursor: pointer;
}

#channel_lineup body a{
    text-decoration: underline;
}

.grid-canvas a {
    position: relative;
    top: 4px;
    color: #0567AE;
}

a.activeLink {
    color: black;
    font-style: italic;
}

#channel_lineup .why {
     width: 14px;
     height: 15px;
     cursor: pointer;
/*     position: absolute;
     top: 252px;
     left: 430px;*/
     z-index:100;
     display:none;
}    

.qtip {
  line-height: 1.25;
}

.qtip-content .wwrapper .code{
  width:50px;
  font-weight:bold;
}
.qtip-content .wwrapper{
  margin-bottom: 7px;
}

.qtip-content .wwrapper.last{
  margin-bottom: 0;
}

.result-count{
  top:60px;
}
.result-count.no-channels-found, .result-count.search-term{
  top:50px;
}
.result-count.no-channels-found.search-term{
  top:44px;
}

.result-count.search-term span{
  display: inline-block;
  vertical-align: bottom;
  max-width:125px;
  overflow-x:hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}


.link-holder{
  top:105px;
}

.link-holder.com{
  top:125px;
}

/**comment button**/

#comment_btn{
  position: absolute;
  top: 20px;
  right: 13px;
}

a.btn-feedback.btns,
span.btn-feedback.btns
{
    position: static;
    top:0;
    right:0;
}

span.btn-feedback:hover {
  background-position: -49px -192px;
}

.comment-btn span.btns {
    display: block;
    width: 44px;
    height: 16px;
    text-indent: -9999px;
}

.comment-btn span:hover{
     cursor: pointer;
}

.slick-row {
  line-height: 1;
}

#container .slick-row:hover .slick-cell {
    background-color: #e9f7ff;
}

.slick-cell {
  border: 1px solid #ddd;
  border-right: none;
  border-bottom: none;
}

/**comment button**/

.loader {
    display: block;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    width: 300px;
    height: 300px;
    position: absolute;
    left: 60%;
    top: 470px; 
    margin-left: -150px;
    margin-top: -150px;
}

.rotated .pull-left div{
    overflow: visible!important;
}

#genreCodes {
    display: none;
    width: 150px;
    position: absolute;
    left: 575px;
    z-index: 99;
}

#cl_genreX {
    position: absolute;
    right: 5px;
    top: 5px;
}

.qtip-default {
    background-color:#fffebd !important;
    color:#000000 !important;
    border-color:#333333 !important;
}

#vsrepeat {
    height: 400px;
    padding-bottom: 1px;
    overflow: auto;
}

#vsrepeat table {
    width: calc(100% - 1px);
}

#vsrepeat tr {
    height: 50px;
}

#vsrepeat td {
    border: 1px solid #ddd;
    border-top: none;
}

.outline {
    border: 1px solid #ddd;
}

#headerTbl {
    padding-right: 17px;
}

#headerTbl table {
    width: 100%;
}

#headerTbl thead,
#headerTbl tbody {
    border-bottom: 1px solid #ddd;
}

#xtra_notes {
    padding: 0 20px 20px 0;
}
.rotate {
    white-space: nowrap;
    position: relative;
    border: none;
    text-align: center;
    font-weight: bold;
}

.rotate a {
    color: #0567ae;
}

.rotate > div {
    position: absolute;
    width: 100%;
    height: 100%;
    bottom: 0;
}

.rotate div div {
    transform: rotate(10deg) skewY(-10deg);
    transform-origin: bottom center;
    width: 100%;
    height: 100%;
}

.rotate span {
    position: absolute;
    transform: rotate(-80deg);
    transform-origin: left center;
    left: 50%;
    bottom: 0;
}

.grey-border {
    border-right: 1px solid #ddd;
    border-left: 1px solid #ddd;
    border-top: 1px solid #ddd;
}

.n-c {
    color: #428bca;
    text-align: right;
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
}

.arrow-icon {
    margin-left: 5px;
    margin-right: 5px;
}

.c-name {
    color: #0567ae;
    font-weight: bold;
    padding-left: 5px;
}

.c-num {
    color: #666;
    padding-left: 5px;
    font-size: 12px;
}

.note {
    font-size: 11px;
    color: #838383;
    font-weight: normal;
}

.rewind {
    color: #0567ae;
    font-weight: bold;
    font-size: 16px;
}

.ondemand {
    color: #0567ae;
    font-weight: bold;
    font-size: 16px;
}

#containerSmall table {
    width: calc(100% - 17px);
}

#containerSmall tr {
    height: 25px;
}

#containerSmall .odd,
#containerSmall .even {
    font-weight: bold;
    text-align: center;
    font-size: 1.4vw;
}

#containerSmall .odd {
    background-color: #c3e7fb;
}

#containerSmall .even {
    background-color: #e9f7ff;
}

#containerSmall small {
    font-style: italic;
}

#containerSmall a {
    color: #0567AE;
}

.sortHead {
    color: black;
    font-weight: bold;
    padding-left: 19px;
    padding-bottom: 1px;
    display: inline-block;
    background: url('../../../common_assets/img/sort_both.png') no-repeat center left;
}

.asc {
    background: url('../../../common_assets/img/sort_asc_orange.png') no-repeat center left;
}

.desc {
    background: url('../../../common_assets/img/sort_desc_orange.png') no-repeat center left;
}

.unmerged {
    display: none;
}

#xtra_notes_tbl {
    min-height: 100px;
    padding: 0 20px 20px 0;
}

#xtra_notes_tbl h2,
#xtra_notes_tbl ul {
    display: none;
}

@media (min-width: 1024px) {
    .unmerged {
        display: table-cell;
    }

    .merged {
        display: none;
    }

    #xtra_notes_tbl h2,
    #xtra_notes_tbl ul {
        display: block;
    }

    #xtra_notes {
        display: none;
    }

    .rotate > div {
        height: 80%;
    }
}

@media (min-width: 950px) {
    #containerSmall .odd,
    #containerSmall .even {
        font-size: 14px;
    }
}

